applications/openeuler-mirrorlist-server/mirrorlist-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirror-list-service
  namespace: openeuler-mirrorlist-server
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: mirror-manager
  type: ClusterIP
